react-front-end-app/src/components/ReviewPage.css
.review-list {
    margin: 20px;
}

p {
    margin: 0 40px;
}

button {
    flex: 1 0 40%;
    height: 60px;
    width: 180px;
    margin: 15px;
    background-color: rgb(206, 221, 255);
    color: black;
    font-size: 20px;
    border-radius: 20px;
    border-color: white;
    border-width: 0px;
}

button:hover {
    background-color: rgb(197, 197, 197);
}

